@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Pick SQL for random row selection in a cleaner way
  - Stop using Class::MOP::load_class (RT#91035)
 
 2.019001  2013-11-23 10:19:28 America/Chicago
